# Amber

./: .gitignore  .travis.yml  .vimrc  CMakeLists.txt  LICENSE  README.md
Amber/ECS/: CMakeLists.txt
Amber/ECS/include/Amber/ECS/: ECS.h  inbox.h  world.h
Amber/ECS/src/: ECS_Component.c  ECS_System.c  component_manager.c  world.c
Amber/ECS/tests/: CMakeLists.txt  basic-test.c
Amber/compat/: CMakeLists.txt
Amber/compat/include/Amber/compat/: atomic.h.in  compat.h  inttypes.h.in  stdbool.h.in  stdint.h.in  stdio.h.in  string.h.in
Amber/compat/include/Amber/compat/atomic/: c11_stdatomic.h  gnu_atomic_builtin.h  gnu_sync_builtin.h  sdl_atomic.h
Amber/config/: CMakeLists.txt
Amber/config/include/Amber/config/: conf.h
Amber/config/src/: conf.c
Amber/config/tests/: CMakeLists.txt  basic_test.c  basic_test.lua
Amber/driver/: CMakeLists.txt
Amber/driver/src/: main.c
Amber/graphics/: CMakeLists.txt
Amber/graphics/include/Amber/graphics/: graphics.h  objloader.h
Amber/graphics/src/: graphics_system.c  graphics_system.h  graphics_system_cleanup.c  graphics_system_init.c  graphics_system_message_handler.c  graphics_system_run.c  objlex.l  objloader.c  objparse.c  objparse.h  objparse.out  objparse.y
Amber/graphics/tests/: CMakeLists.txt  objtest.c
Amber/render/: CMakeLists.txt
Amber/render/include/Amber/render/: glutils.h
Amber/render/src/: glutils.c
Amber/scripting/: CMakeLists.txt
Amber/scripting/include/Amber/scripting/: load_config.h
Amber/scripting/src/: load_config.c
Amber/scripting/tests/: CMakeLists.txt  config-test.c  config-test.lua  test.lua  test2.lua
Amber/ui/: CMakeLists.txt
Amber/ui/include/Amber/ui/: ui.h
Amber/ui/src/: ui_subsystem.c
Amber/util/: CMakeLists.txt
Amber/util/dev/: printf_positional.c
Amber/util/dev/unfinished/: concurrent-hashtable-incomplete.c  hashtable-khash.h  noise.c  noise.h  rbtree.c  rbtree.h
Amber/util/include/Amber/util/: common.h  compat.h.in  concurrent-hashtable-incomplete.h  concurrent-hashtable.h  hashtable.h  hazzard_pointers.h  hlist.h  linux-hashtable.h  queue.h  rbtree.h  ring.h  vector-new.h  vector-old.h  vector.h
Amber/util/src/: common.c  compat.c  concurrent-hashtable.c  hashtable.c  rbtree.c  ring.c
Amber/util/tests/: CMakeLists.txt  hashtable-test.c  linux-hashtable-concurrent.c  linux-hashtable-test.c  minimal-ring-race-stdatomic.c  minimal-ring-race.c  mocking-test.c  noise-test.c  ring-test.c  vector-new-test.c  vector-test.c
cmake/: AddAmberTest.cmake  Amber-config.cmake.in  EnableWarnings.cmake  FindCMocka.cmake  FindIntl.cmake  FindLemon.cmake  FindReadline.cmake  FindSDL2.cmake  FindSDL2_net.cmake  FindSodium.cmake  LibmLibrary.cmake
dev/: ci_win_deps.sh
